Fix touching the map on mobile with two fingers!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,6 @@
 body {
   font-family: sans-serif;
   font-size: 1rem;
-  padding: 3rem;
+  padding: 1rem;
   color: #3a3f4e
-}
-
-.map {
-  /* border: 1px solid #EEE; */
-  padding: 1rem
 }
